yoshimi 1.7.2

2020-8-16 Will
* Final doc updates.
* Set release version 1.7.2

2020-8-16 Will
* Doc updates - no code changes.

2020-8-12- Will
* Merged in pull reqeuest for Kristian.
  Completes SubSynth frequency correction for all
  detune cases.
* Further bank startup enhancement and enabled.
  Copies new default instruments into .share
* Set latest Advanced guide.


2020-8-11- Will
* BugFix: GUI kitmode entries updating wrong items.
* Started work on Banks enhancement.
  Currently disabled.

2020-8-10- Will
* Provisional fix for SubSynth frequency bug.

2020-8-8 Will
* Removed references to Jack in LV2.
  Used time_t instead of jack_nframes_t
* Applied patch from Hubert.
  Removed jack reference from LV2 cmake file.

2020-8-2 Will
* Clarifed CLI 'solo' controls.
* Further refinements to 'solo' NRPNs
* Updated docs.

2020-7-30 Will
* BugFix: NRPN 'Solo' not working. Changed actual control numbers.
* Revised NRPN recognition, particularly shortform ones.
* Updated docs.
* Started ODF format of full list of CCs and NRPNs (in docs).

2020-7-26 Will
* Merged following fixes from Kristian
  Avoid out-of-bounds phase when moving the phase slider of live
   voice.
  Fix unison phase randomness not being respected in sub voices.
  Optimize: Avoid running a full note update when only one part
   has changed

* Reverted union for 'value' in command block.
  Not using the int version, and seems unnecessary.

2020-7-18 Will
* CLI can now restore full key range for part and kit mode.
* Unison enable button now correct when set from CLI.
* Updated docs.

2020-7-16 Will
* Updated user guide to include latest changes.
* Changed AddVoice delay slider to not show boxed value.
  It makes the track longer and it's already in the tooltip.

2020-7-16 Jesper
* Added dynamic tooltips for AddSynth phase offset sliders,
  waveform editor per-harmonic phase offset and magnitude
  sliders, and SubSynth per-harmonic magnitude sliders.