@@ -3,29 +3,32 @@
 @prefix foaf: <http://xmlns.com/foaf/0.1/> .
 @prefix lv2:  <http://lv2plug.in/ns/lv2core#> .
 @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
-@prefix work:  <http://lv2plug.in/ns/ext/worker#> .
-@prefix opts:  <http://lv2plug.in/ns/ext/options#> .
+@prefix work: <http://lv2plug.in/ns/ext/worker#> .
+@prefix opts: <http://lv2plug.in/ns/ext/options#> .
 @prefix ui:   <http://lv2plug.in/ns/extensions/ui#> .
+@prefix state: <http://lv2plug.in/ns/ext/state#> .
 
 <http://yoshimi.sourceforge.net/lv2_plugin_multi>
     a lv2:InstrumentPlugin, lv2:Plugin ;
-    doap:name "Yoshimi-Multi";
+    doap:name "Yoshimi-Multi" ;
     doap:maintainer [
-         foaf:name "Andrew Deryabin";
-         foaf:mbox <mailto:andrewderyabin@gmail.com>;
+         foaf:name "Andrew Deryabin" ;
+         foaf:homepage <http://yoshimi.sourceforge.net> ;
+         foaf:mbox <mailto:andrewderyabin@gmail.com> ;
     ] ;
+    doap:license <http://opensource.org/licenses/GPL-2.0> ;
+    lv2:minorVersion 7;
+    lv2:microVersion 2;
 
     lv2:requiredFeature <http://lv2plug.in/ns/ext/urid#map>,
       <http://lv2plug.in/ns/ext/buf-size#boundedBlockLength>,
       opts:options;
 
-    opts:requiredOption <http://lv2plug.in/ns/ext/buf-size#maxBlockLength>;
+    opts:requiredOption <http://lv2plug.in/ns/ext/buf-size#maxBlockLength> ;
     opts:supportedOptions <http://lv2plug.in/ns/ext/buf-size#minBlockLength>,
-      <http://lv2plug.in/ns/ext/buf-size#nominalBlockLength>;
-
-    lv2:extensionData <http://lv2plug.in/ns/ext/state#interface>,
-		      <http://lv2plug.in/ns/ext/state#StateChanged>,
-                      <http://kxstudio.sf.net/ns/lv2ext/programs#Interface> ;
+      <http://lv2plug.in/ns/ext/buf-size#nominalBlockLength> ;
+    lv2:optionalFeature lv2:hardRTCapable ;
+    lv2:extensionData <http://lv2plug.in/ns/ext/state#interface>;
 
     ui:ui <http://yoshimi.sourceforge.net/lv2_plugin#ExternalUI> ;
 
@@ -260,11 +263,11 @@
     ];
 
     lv2:port [
-	a lv2:OutputPort,  atom:AtomPort ;
-	atom:bufferType atom:Sequence ;
-	lv2:index 36 ;
-	lv2:symbol "notify" ;
-	lv2:name "Notify";
+        a lv2:OutputPort,  atom:AtomPort ;
+        atom:bufferType atom:Sequence ;
+        lv2:index 36 ;
+        lv2:symbol "notify" ;
+        lv2:name "Notify";
     ].
 
 <http://yoshimi.sourceforge.net/lv2_plugin>
@@ -326,9 +329,9 @@
     ];
 
     lv2:port [
-	a lv2:OutputPort,  atom:AtomPort ;
-	atom:bufferType atom:Sequence ;
-	lv2:index 4 ;
-	lv2:symbol "notify" ;
-	lv2:name "Notify";
+        a lv2:OutputPort,  atom:AtomPort ;
+        atom:bufferType atom:Sequence ;
+        lv2:index 4 ;
+        lv2:symbol "notify" ;
+        lv2:name "Notify";
     ].
